# FormulaAI

./: .gitignore  .pre-commit-config.yaml  HEADER_FOOTER_IMPLEMENTATION.md  HEADER_FOOTER_USAGE.md  INTEGRATION_GUIDE.md  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  start.py  test_file_save.py  test_ui_v2.py  web_app.py
.github/workflows/: ci.yml
config/: api_config.example.json  app_config.json  font_mapping.json
config/templates/: 11.json  academic.json  公文格式.json  学术论文-GB规范.json  我的模板.json  数学建模国赛.json  数学建模论文.json  数模.json  数模2.json  期刊投稿-中文.json  本科学位论文.json  研究论文格式.json  科技报告.json  美赛.json  美赛MCM-ICM.json  论文格式.json  默认模板.json
docs/superpowers/plans/: 2026-03-28-runtime-eval-harness-phase2.md
docs/superpowers/specs/: 2026-03-28-runtime-eval-harness-phase2-design.md  2026-03-28-runtime-harness-phase1-design.md
evals/cases/: basic_success.json  invalid_response.json  wrapped_alignment_success.json
src/: __init__.py
src/core/: __init__.py  ai_connector.py  doc_processor.py  doc_processor.py.bak  format_manager.py  header_footer_config.py  header_footer_processor.py  structure_analyzer.py  text_template_parser.py
src/runtime/: __init__.py  contracts.py  document_format_harness.py  eval_harness.py  events.py  run_store.py  template_rules.py
src/ui/: __init__.py  api_config_dialog.py  main_window.py  main_window_v2.py  template_editor.py
src/ui/dialogs/: __init__.py  header_footer_dialog.py  text_parsing_dialog.py
src/ui/panels/: __init__.py  status_panel.py  (+2 more)
src/utils/: __init__.py  config_manager.py  file_utils.py  font_manager.py  logger.py
tests/: report.html  test_ai_connector.py  test_config_and_format_managers.py  test_core_functions.py  test_doc_processor.py  test_document_format_harness.py  test_eval_harness.py  test_header_footer.py  test_independent.py  test_quick.py  test_runtime_run_store.py  test_structure_analyzer.py  test_template_parser.py  test_template_rules.py  test_ui.py  test_web_app.py
